user details shown from server

--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -12,7 +12,7 @@
 
         <mat-form-field>
             <mat-label>Last Name</mat-label>
-            <input [disabled]="loading" [(ngModel)]="user.birthDate" matInput placeholder="Last Name">
+            <input [disabled]="loading" [(ngModel)]="user.lastName" matInput placeholder="Last Name">
         </mat-form-field>
     </div>
 
