--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -61,6 +61,6 @@ mat-toolbar {
 .example-sidenav-content {
     width: auto;
     height: 100vh;
-    background: rgba(0,0,0,0.02);
-    border-left: 1px solid rgba(0,0,0,0.04);
+    // background: rgba(0,0,0,0.02);
+    // border-left: 1px solid rgba(0,0,0,0.04);
 }
