--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,21 +1,36 @@
 <mat-card>
     <mat-card-content class="user-detail-heaader">
+        <button mat-icon-button [matMenuTriggerFor]="userMenu" class="pin-right-upper-corner">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #userMenu="matMenu">
+            <button mat-menu-item (click)="editUserDetail()">Edit</button>
+          </mat-menu>
         <img src="./assets/img/profile.png" alt="">
         <div class="user-details">
-            <h2>  {{user.lastName}}</h2>
+            <h2> {{user.lastName}}</h2>
             {{user.email}} <br>
         </div>
     </mat-card-content>
 </mat-card>
 
 <mat-card class="mt-32">
+    
     <mat-card-header>
+       
+        <button mat-icon-button [matMenuTriggerFor]="addressMenu" class="pin-right-upper-corner">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #addressMenu="matMenu">
+            <button mat-menu-item (click)="editMenu()">Edit</button>
+          </mat-menu>
+
+
+
         <mat-card-title>Address</mat-card-title>
     </mat-card-header>
     <mat-card-content>
         {{user.street}} <br>
         {{user.zipCode}} {{user.city}}
-
-
     </mat-card-content>
 </mat-card>
