--- a/src/app/dialog-edit-address/dialog-edit-address.component.html
+++ b/src/app/dialog-edit-address/dialog-edit-address.component.html
@@ -1,1 +1,34 @@
-<p>dialog-edit-address works!</p>
+@if (loading) {
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+}
+
+<h2 mat-dialog-title>Edit Address</h2>
+<mat-dialog-content>
+   
+
+
+
+    <div>
+        <mat-form-field class="full-width">
+            <mat-label>Street + House No.</mat-label>
+            <input [disabled]="loading" [(ngModel)]="user.street" matInput placeholder="Street + House No.">
+        </mat-form-field>
+    </div>
+
+    <div>
+        <mat-form-field class="mr-16">
+            <mat-label>Zip Code</mat-label>
+            <input [disabled]="loading" [(ngModel)]="user.zipCode" matInput placeholder="Zip Code" type="number">
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>City</mat-label>
+            <input [disabled]="loading" [(ngModel)]="user.city" matInput placeholder="City">
+        </mat-form-field>
+    </div>
+
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+    <button [disabled]="loading" mat-button  matDialogClose>Cancel</button>
+    <button [disabled]="loading" mat-button (click)="saveUser()">Save</button>
+</mat-dialog-actions>
