--- a/src/app/dialog-edit-address/dialog-edit-address.component.html
+++ b/src/app/dialog-edit-address/dialog-edit-address.component.html
@@ -30,5 +30,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button [disabled]="loading" mat-button  matDialogClose>Cancel</button>
-    <button [disabled]="loading" mat-button (click)="saveUser()">Save</button>
+    <button [disabled]="loading" mat-button (click)="updateAddress()">Save</button>
 </mat-dialog-actions>
