--- a/src/app/dialog-edit-user/dialog-edit-user.component.html
+++ b/src/app/dialog-edit-user/dialog-edit-user.component.html
@@ -1,1 +1,39 @@
-<p>dialog-edit-user works!</p>
+@if (loading) {
+<mat-progress-bar mode="indeterminate"></mat-progress-bar>
+}
+
+<h2 mat-dialog-title>Edit User</h2>
+<mat-dialog-content>
+
+    <div>
+        <mat-form-field class="mr-16">
+            <mat-label>First Name</mat-label>
+            <input [disabled]="loading" [(ngModel)]="user.firstName" matInput placeholder="First Name">
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>Last Name</mat-label>
+            <input [disabled]="loading" [(ngModel)]="user.lastName" matInput placeholder="Last Name">
+        </mat-form-field>
+    </div>
+
+    <div>
+        <mat-form-field class="full-width">
+            <mat-label>E-Mail</mat-label>
+            <input [disabled]="loading" [(ngModel)]="user.email" matInput placeholder="E-Mail">
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field class="full-width">
+            <mat-label>Birth Date</mat-label>
+            <input [disabled]="loading" [(ngModel)]="birthDate" matInput [matDatepicker]="picker">
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+    </div>
+
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+    <button [disabled]="loading" mat-button matDialogClose>Cancel</button>
+    <button [disabled]="loading" mat-button (click)="updateUser()">Save</button>
+</mat-dialog-actions>
