--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -8,8 +8,9 @@
           </mat-menu>
         <img src="./assets/img/profile.png" alt="">
         <div class="user-details">
-            <h2> {{user.lastName}}</h2>
+            <h2>{{user.firstName}} {{user.lastName}}</h2>
             {{user.email}} <br>
+            {{formatDate}}
         </div>
     </mat-card-content>
 </mat-card>
