--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,30 @@
-<mat-drawer-container class="mat-drawer-container" autosize>
+<div class="main-container" [class.is-mobile]="mobileQuery.matches">
+  <mat-toolbar color="primary">
+    <!-- <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button> -->
+    <mat-icon class="menu-icon mr-16" (click)="snav.toggle()">menu</mat-icon>
+    <h1>Simple CRM</h1>
+  </mat-toolbar>
+
+  <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+    <mat-sidenav #snav class="sidenav" [opened]="mobileQuery.matches ? 'false' : true"
+      [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+      <!-- <div class="logo-container"><img src="assets/img/logo.png" alt=""></div> -->
+      <ul class="menu-items">
+        <li routerLink="/" routerLinkActive="active"><mat-icon>dashboard</mat-icon>Dashboard</li>
+        <li routerLink="/user" routerLinkActive="active"><mat-icon>perm_identity</mat-icon>User</li>
+      </ul>
+    </mat-sidenav>
+    <div class="router-container">
+      <router-outlet></router-outlet>
+    </div>
+  </mat-sidenav-container>
+</div>
+
+
+
+
+
+<!-- <mat-drawer-container class="mat-drawer-container" autosize>
   <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
     <div class="logo-container"><img src="assets/img/logo.png" alt=""></div>
 
@@ -25,4 +51,4 @@
   </div>
 
 
-</mat-drawer-container>
+</mat-drawer-container> -->
