--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,6 +23,7 @@
         display: flex;
         align-items: center;
         cursor: pointer;
+        outline: none;
 
         mat-icon {
             margin-right: 16px;
@@ -57,13 +58,38 @@ mat-toolbar {
     padding-top: 16px;
 }
 
+.main-container {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+  
+/* ------------------------------------------------------------- */
 
-.example-sidenav-content {
-    width: auto;
-    height: 100vh;
-    // background: rgba(0,0,0,0.02);
-    // border-left: 1px solid rgba(0,0,0,0.04);
-}
+  .is-mobile mat-toolbar {
+    position: fixed;
+    /* Make sure the toolbar will stay on top of the content as it scrolls past. */
+    z-index: 2;
+  }
+  
+  
+  .sidenav-container {
+    /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
+       causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
+    flex: 1;
+  }
+  
+  .is-mobile .sidenav-container {
+    /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
+       `<body>` to be our scrolling element for mobile layouts. */
+    flex: 1 0 auto;
+  }
+  
+/* ------------------------------------------------------------- */
 
 @media (max-width: 600px) {
     .router-container {
