edit product form field

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
       <ul class="menu-items">
         <li routerLink="/" routerLinkActive="active"><mat-icon>dashboard</mat-icon>Dashboard</li>
         <li routerLink="/user" routerLinkActive="active"><mat-icon>perm_identity</mat-icon>User</li>
-        <li routerLink="products" routerLinkActive="active"><mat-icon>perm_identity</mat-icon>Products</li>
+        <li routerLink="products" routerLinkActive="active"><mat-icon>local_shipping</mat-icon>Products</li>
       </ul>
     </mat-sidenav>
     <div class="router-container">
