--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -7,19 +7,19 @@
     <div>
         <mat-form-field class="mr-16">
             <mat-label>First Name</mat-label>
-            <input [disabled]="loading" [(ngModel)]="user.firstName" matInput placeholder="First Name">
+            <input [disabled]="loading" [(ngModel)]="firstName" matInput placeholder="First Name">
         </mat-form-field>
 
         <mat-form-field>
             <mat-label>Last Name</mat-label>
-            <input [disabled]="loading" [(ngModel)]="user.lastName" matInput placeholder="Last Name">
+            <input [disabled]="loading" [(ngModel)]="lastName" matInput placeholder="Last Name">
         </mat-form-field>
     </div>
 
     <div>
         <mat-form-field class="full-width">
             <mat-label>E-Mail</mat-label>
-            <input [disabled]="loading" [(ngModel)]="user.email" matInput placeholder="E-Mail">
+            <input [disabled]="loading" [(ngModel)]="email" matInput placeholder="E-Mail">
         </mat-form-field>
     </div>
 
@@ -35,19 +35,19 @@
     <div>
         <mat-form-field class="full-width">
             <mat-label>Street + House No.</mat-label>
-            <input [disabled]="loading" [(ngModel)]="user.street" matInput placeholder="Street + House No.">
+            <input [disabled]="loading" [(ngModel)]="street" matInput placeholder="Street + House No.">
         </mat-form-field>
     </div>
 
     <div>
         <mat-form-field class="mr-16">
             <mat-label>Zip Code</mat-label>
-            <input [disabled]="loading" [(ngModel)]="user.zipCode" matInput placeholder="Zip Code" type="number">
+            <input [disabled]="loading" [(ngModel)]="zipCode" matInput placeholder="Zip Code" type="number">
         </mat-form-field>
 
         <mat-form-field>
             <mat-label>City</mat-label>
-            <input [disabled]="loading" [(ngModel)]="user.city" matInput placeholder="City">
+            <input [disabled]="loading" [(ngModel)]="city" matInput placeholder="City">
         </mat-form-field>
     </div>
 
